add top gradient

--- a/demos/carousel/index.html
+++ b/demos/carousel/index.html
@@ -19,6 +19,7 @@
 		<ul class="carousel-items-wrap">
 			<li class="active"><a href="#">
 					<img src="images/breaking_dawn.jpg" alt="">
+					<div class="gradient-top"></div>
 					<div class="item-info">
 						<h3>Lorem ipsum dolor sit amet, consectetur</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum facere itaque reiciendis, molestias ex?</p>
@@ -26,6 +27,7 @@
 				</a></li>
 			<li><a href="#">
 					<img src="images/tangled.jpg" alt="">
+					<div class="gradient-top"></div>
 					<div class="item-info">
 						<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis rem facilis doloribus consequuntur, nulla voluptate.</p>
@@ -33,6 +35,7 @@
 				</a></li>
 			<li><a href="#">
 					<img src="images/transformers.jpg" alt="">
+					<div class="gradient-top"></div>
 					<div class="item-info">
 						<h3>consectetur adipisicing</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, atque, commodi?</p>
@@ -40,6 +43,7 @@
 				</a></li>
 			<li><a href="#">
 					<img src="images/vampire_diaries.jpg" alt="">
+					<div class="gradient-top"></div>
 					<div class="item-info">
 						<h3>Alias voluptatibus explicabo commodi qui quibusdam laborum</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim dicta, commodi officiis dolor.</p>
