--- a/manman/index.html
+++ b/manman/index.html
@@ -14,7 +14,7 @@
         <div class="nav nav-transparent">
             <div class="nav-inner clearfix">
                 <div id="logo">
-                    <h1><a href="index.html"><img src="images/logo.png" alt="" width="44" height="56"><strong>满满 · 轻应用</strong></a></h1>
+                    <h1><a href="index.html"><img src="images/logo.png" alt="" width="46" height="56"><strong>满满 · 轻应用</strong></a></h1>
                 </div>
                 <ul class="nav-links">
                     <li class="current"><a href="index.html">首页</a></li>
@@ -75,6 +75,7 @@
                     <div class="page-content">
                         <div class="bg bg1"></div>
                         <div class="bg bg2"></div>
+                        <div class="bg bg3"></div>
                         <div class="page-info">
                             <h2>使用方便&nbsp;&nbsp;&nbsp;快速便捷</h2>
                             <p>开启场景式分类管理大礼包</p>
