--- a/manman/index.html
+++ b/manman/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>满满 － 轻应用</title>
     <meta name="keywords" content="满满, 轻应用">
-    <meta name="description" content="满满 － 轻应用"> 
+    <meta name="description" content="满满 － 轻应用">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/page.css">
     <link rel="stylesheet" href="css/index.css">
