--- a/manman/index.html
+++ b/manman/index.html
@@ -85,10 +85,10 @@
                 </div>
             </div>
             <div class="page-nav">
-                <a index="1" class="current" href="javascript:;"></a>
-                <a index="2" href="javascript:;"></a>
-                <a index="3" href="javascript:;"></a>
-                <a index="4" href="javascript:;"></a>
+                <a class="current" href="javascript:;"></a>
+                <a href="javascript:;"></a>
+                <a href="javascript:;"></a>
+                <a href="javascript:;"></a>
             </div>
             <a href="javascript:;" id="btnNext"></a>
         </div>
