--- a/manman/index.html
+++ b/manman/index.html
@@ -2,9 +2,9 @@
 <html lang="zh-CN" class="home">
 <head>
     <meta charset="UTF-8">
-    <title>满满 － 轻应用</title>
-    <meta name="keywords" content="满满, 轻应用">
-    <meta name="description" content="满满 － 轻应用">
+    <title>满满 － 云应用</title>
+    <meta name="keywords" content="满满, 云应用">
+    <meta name="description" content="满满 － 云应用">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/page.css">
     <link rel="stylesheet" href="css/index.css">
@@ -14,7 +14,7 @@
         <div class="nav nav-transparent">
             <div class="nav-inner clearfix">
                 <div id="logo">
-                    <h1><a href="index.html"><img src="images/logo.png" alt="" width="46" height="56"><strong>满满 · 轻应用</strong></a></h1>
+                    <h1><a href="index.html"><img src="images/logo.png" alt="" width="46" height="56"><strong>满满 · 云应用</strong></a></h1>
                 </div>
                 <ul class="nav-links">
                     <li class="current"><a href="index.html">首页</a></li>
@@ -81,6 +81,10 @@
                             <p>开启场景式分类管理大礼包</p>
                             <p>量身定制适合你的分类</p>
                         </div>
+                    </div>
+                    <div id="footer">
+                        <div class="trans-bg"></div>
+                        <p>易越信息技术有限公司&nbsp;&nbsp;版权所有&nbsp;&nbsp;&copy;2015&nbsp;&nbsp;京ICP备15040222号</p>
                     </div>
                 </div>
             </div>
