--- a/demos/input/date.html
+++ b/demos/input/date.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Date</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
     <input type="date" value="2015-09-02">
