add html5 input test

--- a/demos/input/date.html
+++ b/demos/input/date.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
-    <input type="date" value="2015-09-02">
+    <label for="date">Date</label><input id="date" name="date" type="date" value="2015-09-02">
+    <label for="month">Month</label><input id="month" name="month" type="month" value="2015-09">
+    <label for="week">Week</label><input id="week" name="week" type="week" value="2015-01">
+    <label for="datetime">Datetime</label><input id="datetime" name="datetime" type="datetime">
 </body>
 </html>
