--- a/demos/input/date.html
+++ b/demos/input/date.html
@@ -6,9 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
-    <label for="date">Date</label><input id="date" name="date" type="date" value="2015-09-02">
-    <label for="month">Month</label><input id="month" name="month" type="month" value="2015-09">
-    <label for="week">Week</label><input id="week" name="week" type="week" value="2015-01">
-    <label for="datetime">Datetime</label><input id="datetime" name="datetime" type="datetime">
+    <p>
+        <label for="date">Date</label>
+        <input type="date" id="date" name="date" value="2015-09-02">
+    </p>
+    <p>
+        <label for="month">Month</label>
+        <input type="month" id="month" name="month" value="2015-09">
+    </p>
+    <p>
+        <label for="week">Week</label>
+        <input type="week" id="week" name="week">
+    </p>
+    <p>
+        <label for="time">Time</label>
+        <input type="time" id="time" name="time">
+    </p>
+    <p>
+        <label for="color">Color</label>
+        <input type="color" id="color" name="color">
+    </p>
+    <p>
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email">
+    </p>
+    <p>
+        <label for="number">Number</label>
+        <input type="number" id="number" name="number">
+    </p>
+    <p>
+        <label for="range">Range</label>
+        <input type="range" id="range" name="range" min=0 max=100 step=2>
+    </p>
+    <p>
+        <label for="tel">Tel</label>
+        <input type="tel" id="tel" name="tel">
+    </p>
+    <p>
+        <label for="url">Url</label>
+        <input type="url" id="url" name="url">
+    </p>
 </body>
 </html>
