--- a/demos/input/date.html
+++ b/demos/input/date.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <title>Date</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <style>
+        p label {
+            display: inline-block;
+            width: 70px;
+        }
+        p input {
+            display: inline-block;
+            width: 200px;
+        }
+    </style>
 </head>
 <body>
     <p>
