--- a/ylxPatient/html/my_medical_case.html
+++ b/ylxPatient/html/my_medical_case.html
@@ -6,7 +6,6 @@
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
     <title>我的病例</title>
     <link rel="stylesheet" type="text/css" href="../css/api.css" />
-    <link rel="stylesheet" type="text/css" href="../css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="../css/common.css" />
     <link rel="stylesheet" type="text/css" href="../css/my.css" />
     <link rel="stylesheet" type="text/css" href="../css/my_medical_case.css" />
@@ -16,31 +15,29 @@
 <body>
 <div id="wrap">
     <div id="header">
-    	<div class="back" tapmode onclick="api.closeWin();">
-    		<i class="icon icon-angle-left"></i>
-    	</div>
+    	<div class="back" tapmode onclick="api.closeWin();"></div>
         <h1>我的病例</h1>
     </div>
-    <section class="con-sec">
+    <section>
         <table class="my-table">
             <thead>
                 <tr>
-                    <th><span>病例</span></th>
                     <th><span>日期</span></th>
+                    <th><span>病例</span></th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>耳朵发麻</td>
                     <td>2014-10-29</td>
+                    <td>耳朵发麻</td>
                 </tr>
                 <tr>
-                    <td>头痛恶心</td>
                     <td>2014-12-23</td>
+                    <td>头痛恶心</td>
                 </tr>
                 <tr>
-                    <td>腿痛</td>
                     <td>2014-12-24</td>
+                    <td>腿痛</td>
                 </tr>
             </tbody>
         </table>
