--- a/ylxPatient/html/main.html
+++ b/ylxPatient/html/main.html
@@ -6,7 +6,6 @@
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
     <title>Hello APP</title>
     <link rel="stylesheet" type="text/css" href="../css/api.css" />
-    <link rel="stylesheet" type="text/css" href="../css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="../css/common.css" />
     <link rel="stylesheet" type="text/css" href="../css/main.css" />
 </head>
@@ -27,10 +26,10 @@
 		</div>
 	</div>
     <div id="footer" class="clearfix">
-		<div class="nav-item pull-left nav-item-act" tapmode onclick="switchFrame(0);"><i class="icon icon-home"></i><span>首页</span></div>
-		<div class="nav-item pull-left" tapmode onclick="switchFrame(1);"><i class="icon icon-search"></i><span>发现</span></div>
-		<div class="nav-item pull-left" tapmode onclick="switchFrame(2);"><i class="icon icon-comment"></i><span>消息</span></div>
-		<div class="nav-item pull-left" tapmode onclick="switchFrame(3);"><i class="icon icon-user"></i><span>我</span></div>    	
+        <div class="nav-item pull-left nav-item-act" tapmode onclick="switchFrame(0);"><i class="icon icon-home"></i><span>首页</span></div>
+        <div class="nav-item pull-left" tapmode onclick="switchFrame(1);"><i class="icon icon-search"></i><span>发现</span></div>
+        <div class="nav-item pull-left" tapmode onclick="switchFrame(2);"><i class="icon icon-chat"></i><span>消息</span></div>
+        <div class="nav-item pull-left" tapmode onclick="switchFrame(3);"><i class="icon icon-user"></i><span>我</span></div>        
     </div>	
 </div>
 <script type="text/javascript" src="../script/api.js"></script>
