--- a/ylxPatient/html/my_account.html
+++ b/ylxPatient/html/my_account.html
@@ -6,7 +6,6 @@
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
     <title>我的账户</title>
     <link rel="stylesheet" type="text/css" href="../css/api.css" />
-    <link rel="stylesheet" type="text/css" href="../css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="../css/common.css" />
     <link rel="stylesheet" type="text/css" href="../css/my.css" />
     <link rel="stylesheet" type="text/css" href="../css/my_account.css" />
@@ -14,34 +13,35 @@
 <body>
 <div id="wrap">
     <div id="header">
-    	<div class="back" tapmode onclick="api.closeWin();">
-    		<i class="icon icon-angle-left"></i>
-    	</div>
+    	<div class="back" tapmode onclick="api.closeWin();"></div>
         <h1>我的账户</h1>
     </div>
-    <section class="con-sec">
-    	<div class="account-info clearfix">
-    		<p class="pull-left">账户余额: <span id="accountBalance">106元</span></p>
-			<div class="btn btn-small pull-right">充值</div>	
-    	</div>
+    <section>
+        <div class="account-info-wrap">
+            <div class="account-info clearfix">
+                <p>账户余额: <span id="accountBalance"><strong>106</strong>元</span></p>
+                <div class="btn btn-recharge pull-right">充值</div>
+            </div>
+        </div>
         <table class="my-table">
             <thead>
                 <tr>
+                    <th><span>日期</span></th>
                     <th><span>金额</span></th>
                     <th><span>详情</span></th>
-                    <th><span>日期</span></th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
+                    <td>2014-10-29</td>
                     <td>+300</td>
                     <td>充值</td>
-                    <td>2014-10-29</td>
+                    
                 </tr>
                 <tr>
+                    <td>2014-12-23</td>
                     <td>-10</td>
                     <td>网上咨询</td>
-                    <td>2014-12-23</td>
                 </tr>
             </tbody>
         </table>
