--- a/ylxPatient/html/my_clinic.html
+++ b/ylxPatient/html/my_clinic.html
@@ -6,7 +6,6 @@
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
     <title>我的诊所</title>
     <link rel="stylesheet" type="text/css" href="../css/api.css" />
-    <link rel="stylesheet" type="text/css" href="../css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="../css/common.css" />
     <link rel="stylesheet" type="text/css" href="../css/my.css" />
     <link rel="stylesheet" type="text/css" href="../css/my_clinic.css" />
@@ -14,27 +13,25 @@
 <body>
 <div id="wrap">
     <div id="header">
-    	<div class="back" tapmode onclick="api.closeWin();">
-    		<i class="icon icon-angle-left"></i>
-    	</div>
+    	<div class="back" tapmode onclick="api.closeWin();"></div>
         <h1>我的诊所</h1>
     </div>
-    <section class="con-sec">
+    <section>
         <table class="my-table">
             <thead>
                 <tr>
-                    <th><span>医院</span></th>
                     <th><span>关注日期</span></th>
+                    <th><span>医院</span></th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>北京张祥胜中医医院</td>
                     <td>2014-10-29</td>
+                    <td>北京张祥胜中医医院</td>
                 </tr>
                 <tr>
-                    <td>北京军医院</td>
                     <td>2014-12-23</td>
+                    <td>北京军医院</td>
                 </tr>
             </tbody>
         </table>
