--- a/ylxPatient/html/my_doctor.html
+++ b/ylxPatient/html/my_doctor.html
@@ -6,7 +6,6 @@
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
     <title>我的医生</title>
     <link rel="stylesheet" type="text/css" href="../css/api.css" />
-    <link rel="stylesheet" type="text/css" href="../css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="../css/common.css" />
     <link rel="stylesheet" type="text/css" href="../css/my.css" />
     <link rel="stylesheet" type="text/css" href="../css/my_doctor.css" />
@@ -14,12 +13,10 @@
 <body>
 <div id="wrap">
     <div id="header">
-    	<div class="back" tapmode onclick="api.closeWin();">
-    		<i class="icon icon-angle-left"></i>
-    	</div>
+    	<div class="back" tapmode onclick="api.closeWin();"></div>
         <h1>我的医生</h1>
     </div>
-    <section class="con-sec">
+    <section>
         <table class="my-table">
             <thead>
                 <tr>
