Fix header style

--- a/ylxPatient/html/home_frame.html
+++ b/ylxPatient/html/home_frame.html
@@ -17,7 +17,7 @@
 			<h3>联系电话</h3>
 			<p>010-88886666</p>
 		</div>
-		<div class="top-item health-class">
+		<div class="top-item health-class" onclick="openWin('health_class')">
 			<div class="icon icon-tv"></div>
 			<h3>健康讲堂</h3>
 			<p>为您讲诉健康知识</p>
