--- a/ylxPatient/html/my_account.html
+++ b/ylxPatient/html/my_account.html
@@ -7,8 +7,6 @@
     <title>我的账户</title>
     <link rel="stylesheet" type="text/css" href="../css/api.css" />
     <link rel="stylesheet" type="text/css" href="../css/common.css" />
-    <link rel="stylesheet" type="text/css" href="../css/my.css" />
-    <link rel="stylesheet" type="text/css" href="../css/my_account.css" />
 </head>
 <body>
 <div id="wrap">
@@ -16,41 +14,24 @@
     	<div class="back" tapmode onclick="api.closeWin();"></div>
         <h1>我的账户</h1>
     </div>
-    <section>
-        <div class="account-info-wrap">
-            <div class="account-info clearfix">
-                <p>账户余额: <span id="accountBalance"><strong>106</strong>元</span></p>
-                <div class="btn btn-recharge pull-right">充值</div>
-            </div>
-        </div>
-        <table class="my-table">
-            <thead>
-                <tr>
-                    <th><span>日期</span></th>
-                    <th><span>金额</span></th>
-                    <th><span>详情</span></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>2014-10-29</td>
-                    <td>+300</td>
-                    <td>充值</td>
-                    
-                </tr>
-                <tr>
-                    <td>2014-12-23</td>
-                    <td>-10</td>
-                    <td>网上咨询</td>
-                </tr>
-            </tbody>
-        </table>
-    </section>
 </div>
 <script type="text/javascript" src="../script/api.js"></script>
+<script type="text/javascript" src="../script/zepto.min.js"></script>
 <script type="text/javascript">
 	apiready = function() {
-
+        $api.fixIos7Bar($api.byId('header'));
+        var headerH = $('#header').height();
+        api.openFrame({
+            name: 'my_account_frame',
+            url: 'my_account_frame.html',
+            bounces: true,
+            rect: {
+                x: 0,
+                y: headerH,
+                w: 'auto',
+                h: 'auto'
+            }
+        });
 	};
 </script>
 </body>
