--- a/ylxPatient/html/my_doctor.html
+++ b/ylxPatient/html/my_doctor.html
@@ -7,8 +7,6 @@
     <title>我的医生</title>
     <link rel="stylesheet" type="text/css" href="../css/api.css" />
     <link rel="stylesheet" type="text/css" href="../css/common.css" />
-    <link rel="stylesheet" type="text/css" href="../css/my.css" />
-    <link rel="stylesheet" type="text/css" href="../css/my_doctor.css" />
 </head>
 <body>
 <div id="wrap">
@@ -16,34 +14,24 @@
     	<div class="back" tapmode onclick="api.closeWin();"></div>
         <h1>我的医生</h1>
     </div>
-    <section>
-        <table class="my-table">
-            <thead>
-                <tr>
-                    <th><span>姓名</span></th>
-                    <th><span>医院</span></th>
-                    <th><span>关注日期</span></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>潘红军</td>
-                    <td>北京张祥胜中医医院</td>
-                    <td>2014-10-29</td>
-                </tr>
-                <tr>
-                    <td>张祥胜</td>
-                    <td>北京军医院</td>
-                    <td>2014-12-23</td>
-                </tr>
-            </tbody>
-        </table>
-    </section>
 </div>
 <script type="text/javascript" src="../script/api.js"></script>
+<script type="text/javascript" src="../script/zepto.min.js"></script>
 <script type="text/javascript">
 	apiready = function() {
-
+        $api.fixIos7Bar($api.byId('header'));
+        var headerH = $('#header').height();
+        api.openFrame({
+            name: 'my_doctor_frame',
+            url: 'my_doctor_frame.html',
+            bounces: true,
+            rect: {
+                x: 0,
+                y: headerH,
+                w: 'auto',
+                h: 'auto'
+            }
+        });
 	};
 </script>
 </body>
