--- a/ylxPatient/html/my_info.html
+++ b/ylxPatient/html/my_info.html
@@ -7,7 +7,6 @@
     <title>我的信息</title>
     <link rel="stylesheet" type="text/css" href="../css/api.css" />
     <link rel="stylesheet" type="text/css" href="../css/common.css" />
-    <link rel="stylesheet" type="text/css" href="../css/my_info.css" />
 </head>
 <body>
 <div id="wrap">
@@ -19,9 +18,22 @@
     </div>
 </div>
 <script type="text/javascript" src="../script/api.js"></script>
+<script type="text/javascript" src="../script/zepto.min.js"></script>
 <script type="text/javascript">
 	apiready = function() {
-
+        $api.fixIos7Bar($api.byId('header'));
+        var headerH = $('#header').height();
+        api.openFrame({
+            name: 'my_info_frame',
+            url: 'my_info_frame.html',
+            bounces: true,
+            rect: {
+                x: 0,
+                y: headerH,
+                w: 'auto',
+                h: 'auto'
+            }
+        });
 	};
 </script>
 </body>
