--- a/ylxPatient/html/my_medical_case.html
+++ b/ylxPatient/html/my_medical_case.html
@@ -7,10 +7,6 @@
     <title>我的病例</title>
     <link rel="stylesheet" type="text/css" href="../css/api.css" />
     <link rel="stylesheet" type="text/css" href="../css/common.css" />
-    <link rel="stylesheet" type="text/css" href="../css/my.css" />
-    <link rel="stylesheet" type="text/css" href="../css/my_medical_case.css" />
-    <style>
-    </style>
 </head>
 <body>
 <div id="wrap">
@@ -18,35 +14,24 @@
     	<div class="back" tapmode onclick="api.closeWin();"></div>
         <h1>我的病例</h1>
     </div>
-    <section>
-        <table class="my-table">
-            <thead>
-                <tr>
-                    <th><span>日期</span></th>
-                    <th><span>病例</span></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>2014-10-29</td>
-                    <td>耳朵发麻</td>
-                </tr>
-                <tr>
-                    <td>2014-12-23</td>
-                    <td>头痛恶心</td>
-                </tr>
-                <tr>
-                    <td>2014-12-24</td>
-                    <td>腿痛</td>
-                </tr>
-            </tbody>
-        </table>
-    </section>
 </div>
 <script type="text/javascript" src="../script/api.js"></script>
+<script type="text/javascript" src="../script/zepto.min.js"></script>
 <script type="text/javascript">
 	apiready = function() {
-
+        $api.fixIos7Bar($api.byId('header'));
+        var headerH = $('#header').height();
+        api.openFrame({
+            name: 'my_medical_case_frame',
+            url: 'my_medical_case_frame.html',
+            bounces: true,
+            rect: {
+                x: 0,
+                y: headerH,
+                w: 'auto',
+                h: 'auto'
+            }
+        });
 	};
 </script>
 </body>
